--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;700&display=swap" rel="stylesheet">
     <link href="assets/images/icon.png" rel="icon">
-    <title>Clemo</title>
+    <title>clemo.</title>
 </head>
 <body>
 
