--- a/index.html
+++ b/index.html
@@ -177,5 +177,44 @@
             </section>
         </section>
     </div>
+    <!--Footer-->
+    <footer>
+          <div class="footer">
+               <h1 class="footer__title">get in touch</h1>
+               <div class="footer__content">
+                   <div class="footer__content_contacts">
+                       <div class="contacts__item">
+                           <img src="assets/images/pin.png" alt="">
+                           <p class="contacts__info">23 Mulholland Drive, Suite 721. Los Angeles 10010 100 S. Main Street. Los Angeles 90012</p>
+                       </div>
+                       <div class="contacts__item">
+                           <img src="assets/images/iphone.png" alt="">
+                           <p class="contacts__info">+1-670-567-5590</p>
+                       </div>
+                       <div class="contacts__item">
+                           <img src="assets/images/letter.png" alt="">
+                           <p class="contacts__info">hello@clemocreative.com</p>
+                       </div>
+                       <div class="contacts__socialMedia">
+                           <div class="contacts__socialMedia_item">
+                               <a href="#"><img class="socialMedia__item_logo" src="assets/images/facebook.png" alt=""></a>
+                           </div>
+                           <div class="contacts__socialMedia_item">
+                               <a href="#"><img class="socialMedia__item_logo" src="assets/images/twitter.png" alt=""></a>
+                           </div>
+                           <div class="contacts__socialMedia_item">
+                               <a href="#"><img class="socialMedia__item_logo" src="assets/images/googleplus.png" alt=""></a>
+                           </div>
+                           <div class="contacts__socialMedia_item">
+                               <a href="#"><img class="socialMedia__item_logo" src="assets/images/pinterest.png" alt=""></a>
+                           </div>
+                           <div class="contacts__socialMedia_item">
+                               <a href="#"><img class="socialMedia__item_logo" src="assets/images/instagram.png" alt=""></a>
+                           </div>
+                       </div>
+                   </div>
+               </div>
+          </div>
+    </footer>
 </body>
 </html>
