--- a/index.html
+++ b/index.html
@@ -179,42 +179,67 @@
     </div>
     <!--Footer-->
     <footer>
-          <div class="footer">
-               <h1 class="footer__title">get in touch</h1>
-               <div class="footer__content">
-                   <div class="footer__content_contacts">
-                       <div class="contacts__item">
-                           <img src="assets/images/pin.png" alt="">
-                           <p class="contacts__info">23 Mulholland Drive, Suite 721. Los Angeles 10010 100 S. Main Street. Los Angeles 90012</p>
-                       </div>
-                       <div class="contacts__item">
-                           <img src="assets/images/iphone.png" alt="">
-                           <p class="contacts__info">+1-670-567-5590</p>
-                       </div>
-                       <div class="contacts__item">
-                           <img src="assets/images/letter.png" alt="">
-                           <p class="contacts__info">hello@clemocreative.com</p>
-                       </div>
-                       <div class="contacts__socialMedia">
-                           <div class="contacts__socialMedia_item">
-                               <a href="#"><img class="socialMedia__item_logo" src="assets/images/facebook.png" alt=""></a>
-                           </div>
-                           <div class="contacts__socialMedia_item">
-                               <a href="#"><img class="socialMedia__item_logo" src="assets/images/twitter.png" alt=""></a>
-                           </div>
-                           <div class="contacts__socialMedia_item">
-                               <a href="#"><img class="socialMedia__item_logo" src="assets/images/googleplus.png" alt=""></a>
-                           </div>
-                           <div class="contacts__socialMedia_item">
-                               <a href="#"><img class="socialMedia__item_logo" src="assets/images/pinterest.png" alt=""></a>
-                           </div>
-                           <div class="contacts__socialMedia_item">
-                               <a href="#"><img class="socialMedia__item_logo" src="assets/images/instagram.png" alt=""></a>
-                           </div>
-                       </div>
-                   </div>
-               </div>
-          </div>
+        <div class="footer__getInTouch">
+            <h1 class="footer__title">get in touch</h1>
+            <div class="footer__content">
+                <div class="footer__content_contacts">
+                    <div class="contacts__item">
+                        <img src="assets/images/pin.png" alt="">
+                        <p class="contacts__info">23 Mulholland Drive, Suite 721. Los Angeles 10010 100 S. Main Street. Los Angeles 90012</p>
+                    </div>
+                    <div class="contacts__item">
+                        <img src="assets/images/iphone.png" alt="">
+                        <p class="contacts__info">+1-670-567-5590</p>
+                    </div>
+                    <div class="contacts__item">
+                        <img src="assets/images/letter.png" alt="">
+                        <p class="contacts__info">hello@clemocreative.com</p>
+                    </div>
+                    <div class="contacts__socialMedia">
+                        <div class="contacts__socialMedia_item">
+                            <a href="#"><img class="socialMedia__item_logo" src="assets/images/facebook.png" alt=""></a>
+                        </div>
+                        <div class="contacts__socialMedia_item">
+                            <a href="#"><img class="socialMedia__item_logo" src="assets/images/twitter.png" alt=""></a>
+                        </div>
+                        <div class="contacts__socialMedia_item">
+                            <a href="#"><img class="socialMedia__item_logo" src="assets/images/googleplus.png" alt=""></a>
+                        </div>
+                        <div class="contacts__socialMedia_item">
+                            <a href="#"><img class="socialMedia__item_logo" src="assets/images/pinterest.png" alt=""></a>
+                        </div>
+                        <div class="contacts__socialMedia_item">
+                            <a href="#"><img class="socialMedia__item_logo" src="assets/images/instagram.png" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer__content_feedback">
+                    <div class="feedback__form">
+                        <div class="form__item">
+                            <input type="text" class="form__input" id="name" placeholder=" ">
+                            <label for="name" class="form__label" >name</label>
+                        </div>
+                        <div class="form__item">
+                            <input type="email" class="form__input" id="email" placeholder=" ">
+                            <label for="email" class="form__label">e-mail</label>
+                        </div>
+                        <div class="form__item">
+                            <input type="text" class="form__input" id="message" placeholder=" ">
+                            <label for="message" class="form__label">your message</label>
+                        </div>
+                    </div>
+                    <div class="feedback__button">
+                        <a style="text-decoration: none" href="">
+                                <div class="feedback__button_text">submit</div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer__copyright">
+            <h1 class="footer__copyright_header">&#169 2023 clemo.</h1>
+            <p class="footer__copyright_rights">all rights reserved</p>
+        </div>
     </footer>
 </body>
 </html>
