--- a/index.html
+++ b/index.html
@@ -21,16 +21,17 @@
                 <h1 class="werclemo__h1">we are clemo.</h1>
                 <hr class="line">
                 <div class="werclemo__p">professionals<br>in the creative industries</div>
-                <div class="button">
-                    <a style="text-decoration: none" href="">
+                <div id="getInTouch" class="button">
+                    <a style="text-decoration: none" href="#">
                         <div class="btext">get in touch</div>
                     </a>
                 </div>
 
                 <section class="scrollers">
-                <div class="scroller"></div>
-                <div class="scroller"></div>
-                <div class="scroller"></div>
+                <div id="scrollToWwedo" class="scroller"></div>
+                <div id="scrollToBestwork" class="scroller"></div>
+                <div id="scrollToBestteam" class="scroller"></div>
+                <div id="scrollToClients" class="scroller"></div>
                 </section>
 
             </div>
@@ -150,7 +151,7 @@
     </section>
     
     <!--Clients-->
-    <div class="container">
+    <div id="clientsSay" class="container">
         <h1 class="clients__title">clients say's</h1>
         <section class="clients">
             <div class="clients__card">
@@ -242,5 +243,6 @@
             <p class="footer__copyright_rights">all rights reserved</p>
         </div>
     </footer>
+    <script async src="script.js" type="text/javascript"></script>
 </body>
 </html>
