--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
                 </div>
 
                 <section class="scrollers">
-                <div id="scrollToWwedo" class="scroller"></div>
-                <div id="scrollToBestwork" class="scroller"></div>
-                <div id="scrollToBestteam" class="scroller"></div>
-                <div id="scrollToClients" class="scroller"></div>
+                    <div id="scrollToIntro" class="scroller scroller_active"></div>
+                    <div id="scrollToWwedo" class="scroller"></div>
+                    <div id="scrollToBestwork" class="scroller"></div>
+                    <div id="scrollToBestteam" class="scroller"></div>
+                    <div id="scrollToClients" class="scroller"></div>
                 </section>
 
             </div>
@@ -121,7 +122,47 @@
             <div class="bestteam__slider">
                 <div class="pointer p_l"></div>
                 <div class="pointer p_r"></div>
-                <div class="bestteam__sliderContent">
+                <div id="bestteam_first" class="bestteam__sliderContent">
+                    <div class="bestteam__item">
+                        <img src="https://via.placeholder.com/168" class="bestteam__item__img">
+                        <h1 class="bestteam__name">paul hall</h1>
+                        <hr class="line">
+                        <p class="bestteam__info">art director</p>
+                    </div>
+                    <div class="bestteam__item">
+                        <img src="https://via.placeholder.com/168" class="bestteam__item__img">
+                        <h1 class="bestteam__name">joshua<br> spencer</h1>
+                        <hr class="line">
+                        <p class="bestteam__info">founder</p>
+                    </div>
+                    <div class="bestteam__item">
+                        <img src="https://via.placeholder.com/168" class="bestteam__item__img">
+                        <h1 class="bestteam__name">diane lewis</h1>
+                        <hr class="line">
+                        <p class="bestteam__info">artist, designer</p>
+                    </div>
+                </div>
+                <div id="bestteam_second" class="bestteam__sliderContent bestteam__slider_hidden">
+                    <div class="bestteam__item">
+                        <img src="https://via.placeholder.com/168" class="bestteam__item__img">
+                        <h1 class="bestteam__name">paul hall</h1>
+                        <hr class="line">
+                        <p class="bestteam__info">art director</p>
+                    </div>
+                    <div class="bestteam__item">
+                        <img src="https://via.placeholder.com/168" class="bestteam__item__img">
+                        <h1 class="bestteam__name">joshua<br> spencer</h1>
+                        <hr class="line">
+                        <p class="bestteam__info">founder</p>
+                    </div>
+                    <div class="bestteam__item">
+                        <img src="https://via.placeholder.com/168" class="bestteam__item__img">
+                        <h1 class="bestteam__name">diane lewis</h1>
+                        <hr class="line">
+                        <p class="bestteam__info">artist, designer</p>
+                    </div>
+                </div>
+                <div id="bestteam_third" class="bestteam__sliderContent bestteam__slider_hidden">
                     <div class="bestteam__item">
                         <img src="https://via.placeholder.com/168" class="bestteam__item__img">
                         <h1 class="bestteam__name">paul hall</h1>
@@ -142,7 +183,7 @@
                     </div>
                 </div>
                 <section class="bestteam__scrollers">
-                    <div class="bestteam__scroller"></div>
+                    <div class="bestteam__scroller bestteam__scroller_active"></div>
                     <div class="bestteam__scroller"></div>
                     <div class="bestteam__scroller"></div>
                 </section>
