--- a/index.html
+++ b/index.html
@@ -195,7 +195,37 @@
     <div id="clientsSay" class="container">
         <h1 class="clients__title">clients say's</h1>
         <section class="clients">
-            <div class="clients__card">
+            <div id="clientOne" class="clients__card card_active">
+                <div class="clients__preview">
+                    <h1 class="client__name">frank sims</h1>
+                    <hr class="line client__line">
+                    <p class="client__job">photographer</p>
+                </div>
+                <div class="clients__info">
+                    <p class="clients__info__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem numquam aliquam ex iusto, perspiciatis reiciendis accusantium aperiam at itaque blanditiis dolorum officiis ducimus officia, maiores dicta, perferendis ad voluptatem ullam?</p>
+                </div>
+            </div>
+            <div id="clientTwo" class="clients__card">
+                <div class="clients__preview">
+                    <h1 class="client__name">frank sims</h1>
+                    <hr class="line client__line">
+                    <p class="client__job">photographer</p>
+                </div>
+                <div class="clients__info">
+                    <p class="clients__info__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem numquam aliquam ex iusto, perspiciatis reiciendis accusantium aperiam at itaque blanditiis dolorum officiis ducimus officia, maiores dicta, perferendis ad voluptatem ullam?</p>
+                </div>
+            </div>
+            <div id="clientThree" class="clients__card">
+                <div class="clients__preview">
+                    <h1 class="client__name">frank sims</h1>
+                    <hr class="line client__line">
+                    <p class="client__job">photographer</p>
+                </div>
+                <div class="clients__info">
+                    <p class="clients__info__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem numquam aliquam ex iusto, perspiciatis reiciendis accusantium aperiam at itaque blanditiis dolorum officiis ducimus officia, maiores dicta, perferendis ad voluptatem ullam?</p>
+                </div>
+            </div>
+            <div id="clientFour" class="clients__card">
                 <div class="clients__preview">
                     <h1 class="client__name">frank sims</h1>
                     <hr class="line client__line">
@@ -206,16 +236,16 @@
                 </div>
             </div>
             <div class="clients__photos">
-                <img src="https://via.placeholder.com/266x140" class="client__photos__item">
-                <img src="https://via.placeholder.com/266x140" class="client__photos__item">
-                <img src="https://via.placeholder.com/266x140" class="client__photos__item">
-                <img src="https://via.placeholder.com/266x140" class="client__photos__item">
+                <img src="https://via.placeholder.com/266x140" class="client__photos__item photos__item_focused">
+                <img src="https://via.placeholder.com/266x140" class="client__photos__item photos__item_still">
+                <img src="https://via.placeholder.com/266x140" class="client__photos__item photos__item_still">
+                <img src="https://via.placeholder.com/266x140" class="client__photos__item photos__item_still">
             </div>
             <section class="bestteam__scrollers clients__scrollers">
-                <div class="bestteam__scroller"></div>
-                <div class="bestteam__scroller"></div>
-                <div class="bestteam__scroller"></div>
-                <div class="bestteam__scroller"></div>
+                <div class="firstClient clients__scroller clients__scroller_active"></div>
+                <div class="secondClient clients__scroller"></div>
+                <div class="thirdClient clients__scroller"></div>
+                <div class="fourthClient clients__scroller"></div>
             </section>
         </section>
     </div>
