--- a/index.html
+++ b/index.html
@@ -117,77 +117,81 @@
     
     <!--Best team-->
     <section class="bestteam">
-        <div class="werclemo">
+        <div id="bestteam__container" class="werclemo">
             <h1 class="bestteam__title">best team</h1>
-            <div class="bestteam__slider">
-                <div class="pointer p_l"></div>
-                <div class="pointer p_r"></div>
-                <div id="bestteam_first" class="bestteam__sliderContent">
-                    <div class="bestteam__item">
-                        <img src="https://via.placeholder.com/168" class="bestteam__item__img">
-                        <h1 class="bestteam__name">paul hall</h1>
-                        <hr class="line">
-                        <p class="bestteam__info">art director</p>
+                <div class="bestteam__slider">
+                    <div class="pointer p_l"></div>
+                    <div class="pointer p_r"></div>
+                    <div class="wrapper">
+                        <div class="slides">
+                            <div id="f_slide" class="slide">
+                                <div class="bestteam__item">
+                                    <img src="https://via.placeholder.com/168" class="bestteam__item__img">
+                                    <h1 class="bestteam__name">paul hall</h1>
+                                    <hr class="line">
+                                    <p class="bestteam__info">art director</p>
+                                </div>
+                                <div class="bestteam__item">
+                                    <img src="https://via.placeholder.com/168" class="bestteam__item__img">
+                                    <h1 class="bestteam__name">joshua<br> spencer</h1>
+                                    <hr class="line">
+                                    <p class="bestteam__info">founder</p>
+                                </div>
+                                <div class="bestteam__item">
+                                    <img src="https://via.placeholder.com/168" class="bestteam__item__img">
+                                    <h1 class="bestteam__name">diane lewis</h1>
+                                    <hr class="line">
+                                    <p class="bestteam__info">artist, designer</p>
+                                </div>
+                            </div>
+                            <div id="s_slide" class="slide">
+                                <div class="bestteam__item">
+                                    <img src="https://via.placeholder.com/168" class="bestteam__item__img">
+                                    <h1 class="bestteam__name">Lorem, ipsum.</h1>
+                                    <hr class="line">
+                                    <p class="bestteam__info">Lorem, ipsum.</p>
+                                </div>
+                                <div class="bestteam__item">
+                                    <img src="https://via.placeholder.com/168" class="bestteam__item__img">
+                                    <h1 class="bestteam__name">Lorem.<br> ipsum</h1>
+                                    <hr class="line">
+                                    <p class="bestteam__info">dolor</p>
+                                </div>
+                                <div class="bestteam__item">
+                                    <img src="https://via.placeholder.com/168" class="bestteam__item__img">
+                                    <h1 class="bestteam__name">sit amet</h1>
+                                    <hr class="line">
+                                    <p class="bestteam__info">consectetur adipisicing</p>
+                                </div>
+                            </div>
+                            <div id="t_slide" class="slide">
+                                <div class="bestteam__item">
+                                    <img src="https://via.placeholder.com/168" class="bestteam__item__img">
+                                    <h1 class="bestteam__name">Lorem, ipsum.</h1>
+                                    <hr class="line">
+                                    <p class="bestteam__info">Lorem, ipsum.</p>
+                                </div>
+                                <div class="bestteam__item">
+                                    <img src="https://via.placeholder.com/168" class="bestteam__item__img">
+                                    <h1 class="bestteam__name">Lorem.<br> ipsum</h1>
+                                    <hr class="line">
+                                    <p class="bestteam__info">dolor</p>
+                                </div>
+                                <div class="bestteam__item">
+                                    <img src="https://via.placeholder.com/168" class="bestteam__item__img">
+                                    <h1 class="bestteam__name">sit amet</h1>
+                                    <hr class="line">
+                                    <p class="bestteam__info">consectetur adipisicing</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="bestteam__item">
-                        <img src="https://via.placeholder.com/168" class="bestteam__item__img">
-                        <h1 class="bestteam__name">joshua<br> spencer</h1>
-                        <hr class="line">
-                        <p class="bestteam__info">founder</p>
-                    </div>
-                    <div class="bestteam__item">
-                        <img src="https://via.placeholder.com/168" class="bestteam__item__img">
-                        <h1 class="bestteam__name">diane lewis</h1>
-                        <hr class="line">
-                        <p class="bestteam__info">artist, designer</p>
-                    </div>
+                    <section class="bestteam__scrollers">
+                        <div class="bestteam__scroller"></div>
+                        <div class="bestteam__scroller bestteam__scroller_active"></div>
+                        <div class="bestteam__scroller"></div>
+                    </section>
                 </div>
-                <div id="bestteam_second" class="bestteam__sliderContent bestteam__slider_hidden">
-                    <div class="bestteam__item">
-                        <img src="https://via.placeholder.com/168" class="bestteam__item__img">
-                        <h1 class="bestteam__name">paul hall</h1>
-                        <hr class="line">
-                        <p class="bestteam__info">art director</p>
-                    </div>
-                    <div class="bestteam__item">
-                        <img src="https://via.placeholder.com/168" class="bestteam__item__img">
-                        <h1 class="bestteam__name">joshua<br> spencer</h1>
-                        <hr class="line">
-                        <p class="bestteam__info">founder</p>
-                    </div>
-                    <div class="bestteam__item">
-                        <img src="https://via.placeholder.com/168" class="bestteam__item__img">
-                        <h1 class="bestteam__name">diane lewis</h1>
-                        <hr class="line">
-                        <p class="bestteam__info">artist, designer</p>
-                    </div>
-                </div>
-                <div id="bestteam_third" class="bestteam__sliderContent bestteam__slider_hidden">
-                    <div class="bestteam__item">
-                        <img src="https://via.placeholder.com/168" class="bestteam__item__img">
-                        <h1 class="bestteam__name">paul hall</h1>
-                        <hr class="line">
-                        <p class="bestteam__info">art director</p>
-                    </div>
-                    <div class="bestteam__item">
-                        <img src="https://via.placeholder.com/168" class="bestteam__item__img">
-                        <h1 class="bestteam__name">joshua<br> spencer</h1>
-                        <hr class="line">
-                        <p class="bestteam__info">founder</p>
-                    </div>
-                    <div class="bestteam__item">
-                        <img src="https://via.placeholder.com/168" class="bestteam__item__img">
-                        <h1 class="bestteam__name">diane lewis</h1>
-                        <hr class="line">
-                        <p class="bestteam__info">artist, designer</p>
-                    </div>
-                </div>
-                <section class="bestteam__scrollers">
-                    <div class="bestteam__scroller bestteam__scroller_active"></div>
-                    <div class="bestteam__scroller"></div>
-                    <div class="bestteam__scroller"></div>
-                </section>
-            </div>
         </div>
     </section>
     
