--- a/index.html
+++ b/index.html
@@ -147,48 +147,48 @@
                             <div id="s_slide" class="slide">
                                 <div class="bestteam__item">
                                     <img src="https://via.placeholder.com/168" class="bestteam__item__img">
-                                    <h1 class="bestteam__name">Lorem, ipsum.</h1>
+                                    <h1 class="bestteam__name">amy roy</h1>
                                     <hr class="line">
-                                    <p class="bestteam__info">Lorem, ipsum.</p>
+                                    <p class="bestteam__info">online tutor</p>
                                 </div>
                                 <div class="bestteam__item">
                                     <img src="https://via.placeholder.com/168" class="bestteam__item__img">
-                                    <h1 class="bestteam__name">Lorem.<br> ipsum</h1>
+                                    <h1 class="bestteam__name">katrina<br>owens</h1>
                                     <hr class="line">
-                                    <p class="bestteam__info">dolor</p>
+                                    <p class="bestteam__info">personal trainer</p>
                                 </div>
                                 <div class="bestteam__item">
                                     <img src="https://via.placeholder.com/168" class="bestteam__item__img">
-                                    <h1 class="bestteam__name">sit amet</h1>
+                                    <h1 class="bestteam__name">kyla odom</h1>
                                     <hr class="line">
-                                    <p class="bestteam__info">consectetur adipisicing</p>
+                                    <p class="bestteam__info">seo expert</p>
                                 </div>
                             </div>
                             <div id="t_slide" class="slide">
                                 <div class="bestteam__item">
                                     <img src="https://via.placeholder.com/168" class="bestteam__item__img">
-                                    <h1 class="bestteam__name">Lorem, ipsum.</h1>
+                                    <h1 class="bestteam__name">andy keith</h1>
                                     <hr class="line">
-                                    <p class="bestteam__info">Lorem, ipsum.</p>
+                                    <p class="bestteam__info">chat agent</p>
                                 </div>
                                 <div class="bestteam__item">
                                     <img src="https://via.placeholder.com/168" class="bestteam__item__img">
-                                    <h1 class="bestteam__name">Lorem.<br> ipsum</h1>
+                                    <h1 class="bestteam__name">junaid villa</h1>
                                     <hr class="line">
-                                    <p class="bestteam__info">dolor</p>
+                                    <p class="bestteam__info">online moderator</p>
                                 </div>
                                 <div class="bestteam__item">
                                     <img src="https://via.placeholder.com/168" class="bestteam__item__img">
-                                    <h1 class="bestteam__name">sit amet</h1>
+                                    <h1 class="bestteam__name">casper stark</h1>
                                     <hr class="line">
-                                    <p class="bestteam__info">consectetur adipisicing</p>
+                                    <p class="bestteam__info">data engeneer</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <section class="bestteam__scrollers">
                         <div class="bestteam__scroller"></div>
-                        <div class="bestteam__scroller bestteam__scroller_active"></div>
+                        <div class="bestteam__scroller scroller_active"></div>
                         <div class="bestteam__scroller"></div>
                     </section>
                 </div>
