added clients fader

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <title>clemo.</title>
 </head>
 <body>
-
     <div class="intro">
         <div class="container">
             <h1 class="title">clemo.</h1>
@@ -199,7 +198,7 @@
     <div id="clientsSay" class="container">
         <h1 class="clients__title">clients say's</h1>
         <section class="clients">
-            <div id="clientOne" class="clients__card card_active">
+            <div id="client1" class="clients__card card_shown">
                 <div class="clients__preview">
                     <h1 class="client__name">frank sims</h1>
                     <hr class="line client__line">
@@ -209,47 +208,47 @@
                     <p class="clients__info__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem numquam aliquam ex iusto, perspiciatis reiciendis accusantium aperiam at itaque blanditiis dolorum officiis ducimus officia, maiores dicta, perferendis ad voluptatem ullam?</p>
                 </div>
             </div>
-            <div id="clientTwo" class="clients__card">
+            <div id="client2" class="clients__card">
                 <div class="clients__preview">
-                    <h1 class="client__name">frank sims</h1>
+                    <h1 class="client__name">Lorem, ipsum.</h1>
                     <hr class="line client__line">
-                    <p class="client__job">photographer</p>
+                    <p class="client__job">lorem</p>
                 </div>
                 <div class="clients__info">
-                    <p class="clients__info__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem numquam aliquam ex iusto, perspiciatis reiciendis accusantium aperiam at itaque blanditiis dolorum officiis ducimus officia, maiores dicta, perferendis ad voluptatem ullam?</p>
+                    <p class="clients__info__text">Dolorem numquam aliquam ex iusto, perspiciatis reiciendis accusantium aperiam at itaque blanditiis dolorum officiis ducimus officia, maiores dicta, perferendis ad voluptatem ullam?</p>
                 </div>
             </div>
-            <div id="clientThree" class="clients__card">
+            <div id="client3" class="clients__card">
                 <div class="clients__preview">
                     <h1 class="client__name">frank sims</h1>
                     <hr class="line client__line">
                     <p class="client__job">photographer</p>
                 </div>
                 <div class="clients__info">
-                    <p class="clients__info__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem numquam aliquam ex iusto, perspiciatis reiciendis accusantium aperiam at itaque blanditiis dolorum officiis ducimus officia, maiores dicta, perferendis ad voluptatem ullam?</p>
+                    <p class="clients__info__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam facere praesentium quasi provident soluta laboriosam!</p>
                 </div>
             </div>
-            <div id="clientFour" class="clients__card">
+            <div id="client4" class="clients__card">
                 <div class="clients__preview">
                     <h1 class="client__name">frank sims</h1>
                     <hr class="line client__line">
                     <p class="client__job">photographer</p>
                 </div>
                 <div class="clients__info">
-                    <p class="clients__info__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem numquam aliquam ex iusto, perspiciatis reiciendis accusantium aperiam at itaque blanditiis dolorum officiis ducimus officia, maiores dicta, perferendis ad voluptatem ullam?</p>
+                    <p class="clients__info__text">Perspiciatis reiciendis accusantium aperiam at itaque blanditiis dolorum officiis ducimus officia, maiores dicta, perferendis ad voluptatem ullam?</p>
                 </div>
             </div>
             <div class="clients__photos">
                 <img src="https://via.placeholder.com/266x140" class="client__photos__item photos__item_focused">
-                <img src="https://via.placeholder.com/266x140" class="client__photos__item photos__item_still">
-                <img src="https://via.placeholder.com/266x140" class="client__photos__item photos__item_still">
-                <img src="https://via.placeholder.com/266x140" class="client__photos__item photos__item_still">
+                <img src="https://via.placeholder.com/266x140" class="client__photos__item">
+                <img src="https://via.placeholder.com/266x140" class="client__photos__item">
+                <img src="https://via.placeholder.com/266x140" class="client__photos__item">
             </div>
             <section class="bestteam__scrollers clients__scrollers">
-                <div class="firstClient clients__scroller clients__scroller_active"></div>
-                <div class="secondClient clients__scroller"></div>
-                <div class="thirdClient clients__scroller"></div>
-                <div class="fourthClient clients__scroller"></div>
+                <div class="clients__scroller clients__scroller_active"></div>
+                <div class="clients__scroller"></div>
+                <div class="clients__scroller"></div>
+                <div class="clients__scroller"></div>
             </section>
         </section>
     </div>
@@ -273,21 +272,21 @@
                         <p class="contacts__info">hello@clemocreative.com</p>
                     </div>
                     <div class="contacts__socialMedia">
-                        <div class="contacts__socialMedia_item">
-                            <a href="#"><img class="socialMedia__item_logo" src="assets/images/facebook.png" alt=""></a>
-                        </div>
-                        <div class="contacts__socialMedia_item">
-                            <a href="#"><img class="socialMedia__item_logo" src="assets/images/twitter.png" alt=""></a>
-                        </div>
-                        <div class="contacts__socialMedia_item">
-                            <a href="#"><img class="socialMedia__item_logo" src="assets/images/googleplus.png" alt=""></a>
-                        </div>
-                        <div class="contacts__socialMedia_item">
-                            <a href="#"><img class="socialMedia__item_logo" src="assets/images/pinterest.png" alt=""></a>
-                        </div>
-                        <div class="contacts__socialMedia_item">
-                            <a href="#"><img class="socialMedia__item_logo" src="assets/images/instagram.png" alt=""></a>
-                        </div>
+                        <a class="contacts__socialMedia_item" href="#">
+                            <img class="socialMedia__item_logo" src="assets/images/facebook.png" alt="">
+                        </a>
+                        <a class="contacts__socialMedia_item" href="#">
+                            <img class="socialMedia__item_logo" src="assets/images/twitter.png" alt="">
+                        </a>
+                        <a class="contacts__socialMedia_item" href="#">
+                            <img class="socialMedia__item_logo" src="assets/images/googleplus.png" alt="">
+                        </a>
+                        <a class="contacts__socialMedia_item"  href="#">
+                            <img class="socialMedia__item_logo" src="assets/images/pinterest.png" alt="">
+                        </a>
+                        <a class="contacts__socialMedia_item" href="#">
+                            <img class="socialMedia__item_logo" src="assets/images/instagram.png" alt="">
+                        </a>
                     </div>
                 </div>
                 <div class="footer__content_feedback">
