--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             </div>
         </div>
         <div class="footer__copyright">
-            <h1 class="footer__copyright_header">&#169 2023 clemo.</h1>
+            <h1 class="footer__copyright_header"></h1>
             <p class="footer__copyright_rights">all rights reserved</p>
         </div>
     </footer>
