--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script async src="script.js" type="text/javascript"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;700&display=swap" rel="stylesheet">
@@ -27,13 +28,12 @@
                 </div>
 
                 <section class="scrollers">
-                    <div id="scrollToIntro" class="scroller scroller_active"></div>
-                    <div id="scrollToWwedo" class="scroller"></div>
-                    <div id="scrollToBestwork" class="scroller"></div>
-                    <div id="scrollToBestteam" class="scroller"></div>
-                    <div id="scrollToClients" class="scroller"></div>
+                    <div class="scrollToIntro scroller scroller_active"></div>
+                    <div class="scrollToWwedo scroller"></div>
+                    <div class="scrollToBestwork scroller"></div>
+                    <div class="scrollToBestteam scroller"></div>
+                    <div class="scrollToClients scroller"></div>
                 </section>
-
             </div>
         </div>
     </div>
@@ -317,6 +317,5 @@
             <p class="footer__copyright_rights">all rights reserved</p>
         </div>
     </footer>
-    <script async src="script.js" type="text/javascript"></script>
 </body>
 </html>
