Clemo final. Non-adaptive

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                         </div>
                     </div>
                     <div class="feedback__button">
-                        <a style="text-decoration: none" href="">
+                        <a style="text-decoration: none">
                                 <div class="feedback__button_text">submit</div>
                         </a>
                     </div>
