--- a/index.html
+++ b/index.html
@@ -210,32 +210,32 @@
             </div>
             <div id="client2" class="clients__card">
                 <div class="clients__preview">
-                    <h1 class="client__name">Lorem, ipsum.</h1>
+                    <h1 class="client__name">raees brown</h1>
                     <hr class="line client__line">
-                    <p class="client__job">lorem</p>
+                    <p class="client__job">artist</p>
                 </div>
                 <div class="clients__info">
-                    <p class="clients__info__text">Dolorem numquam aliquam ex iusto, perspiciatis reiciendis accusantium aperiam at itaque blanditiis dolorum officiis ducimus officia, maiores dicta, perferendis ad voluptatem ullam?</p>
+                    <p class="clients__info__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui nostrum adipisci totam, illo nesciunt!</p>
                 </div>
             </div>
             <div id="client3" class="clients__card">
                 <div class="clients__preview">
-                    <h1 class="client__name">frank sims</h1>
+                    <h1 class="client__name">hana york</h1>
                     <hr class="line client__line">
-                    <p class="client__job">photographer</p>
+                    <p class="client__job">designer</p>
                 </div>
                 <div class="clients__info">
-                    <p class="clients__info__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam facere praesentium quasi provident soluta laboriosam!</p>
+                    <p class="clients__info__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis ratione doloribus eum quaerat labore voluptate maxime unde beatae fugit cupiditate consequatur nostrum, officiis.</p>
                 </div>
             </div>
             <div id="client4" class="clients__card">
                 <div class="clients__preview">
-                    <h1 class="client__name">frank sims</h1>
+                    <h1 class="client__name">steve snow</h1>
                     <hr class="line client__line">
-                    <p class="client__job">photographer</p>
+                    <p class="client__job">musician</p>
                 </div>
                 <div class="clients__info">
-                    <p class="clients__info__text">Perspiciatis reiciendis accusantium aperiam at itaque blanditiis dolorum officiis ducimus officia, maiores dicta, perferendis ad voluptatem ullam?</p>
+                    <p class="clients__info__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 </div>
             </div>
             <div class="clients__photos">
