--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                     <p class="client__job">musician</p>
                 </div>
                 <div class="clients__info">
-                    <p class="clients__info__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <p class="clients__info__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores repudiandae ipsum, harum nemo corporis amet suscipit accusantium ut.</p>
                 </div>
             </div>
             <div class="clients__photos">
