--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     <p class="client__job">artist</p>
                 </div>
                 <div class="clients__info">
-                    <p class="clients__info__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui nostrum adipisci totam, illo nesciunt!</p>
+                    <p class="clients__info__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero quam commodi esse totam tempora optio, labore architecto modi ratione porro nisi.</p>
                 </div>
             </div>
             <div id="client3" class="clients__card">
